--- a/battery_drivers/package.xml
+++ b/battery_drivers/package.xml
@@ -15,7 +15,7 @@
   <test_depend>python3-pytest</test_depend>
 
   <exec_depend>python3-semver</exec_depend>
-  <exec_depend>python3-pyserial</exec_depend>
+  <exec_depend>python3-serial</exec_depend>
   <exec_depend>dt_interfaces_cps</exec_depend>
 
   <export>
