--- a/adafruit_drivers/package.xml
+++ b/adafruit_drivers/package.xml
@@ -13,6 +13,8 @@
   <test_depend>ament_pep257</test_depend>
   <test_depend>python3-pytest</test_depend>
 
+  <exec_depend>python3-smbus</exec_depend>
+  <exec_depend>python3-smbus2-pip</exec_depend>
   <exec_depend>dt_device_utils</exec_depend>
 
   <export>
