--- a/wheel_encoder/package.xml
+++ b/wheel_encoder/package.xml
@@ -21,7 +21,7 @@
   <exec_depend>dt_interfaces_cps</exec_depend>
   <exec_depend>ros2launch</exec_depend>
   <!-- <exec_depend>tf_transformations</exec_depend> -->
-  <!-- <exec_depend>transforms3d</exec_depend> -->
+  <exec_depend>python3-transforms3d</exec_depend>
 
   <export>
     <build_type>ament_python</build_type>
